# qex

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: 00_notebook_config.ipynb  01_notebook_od_dataset.ipynb  02_notebook_od_trainer.ipynb  03_notebook_td_dataset.ipynb  04_notebook_td_trainer.ipynb  15_notebook_qnn_noise_scaling.ipynb
notebooks/models/: 02a_notebook_od_ksr.ipynb  02b_notebook_od_mlp.ipynb  02c_notebook_od_qnn.ipynb  02d_notebook_od_qicnn.ipynb
qedft/config/: config.py  default_config.yaml  default_config_td.yaml  train_config.yaml  train_config_global.yaml
qedft/data_io/: dataset_loader.py
qedft/data_io/td/: dataset_generation.py  dataset_generation_legacy.py
qedft/models/: initial_density.pkl  networks.py  utils.py  wrappers.py
qedft/models/classical/: classical_models.py  global_ksr_model.py
qedft/models/quantum/: convolutional_models.py  entangling_layers.py  feature_maps.py  hardware_ansatz.py  measurement.py  quantum_models.py  simple_gqnn.py  variational_ansatz.py
qedft/train/: trainer.py
qedft/train/od/: eval.py  jit_scf.py  losses_no_jit.py  scf.py  train.py  trainer.py
qedft/train/td/: __init__.py  eval_gto.py  fermi.py  generalized_eigensolver.py  generalized_eigensolver_masked.py  hf.py  hf_legacy.py  jax_diis.py  numint.py  numint_legacy.py  rks.py  rks_legacy.py  scf_functions_masked.py  stax_to_flax_network.py  train_legacy_no_jit.py  trainer_legacy_no_jit.py  utils.py  xc.py
qedft/utils/: plot.py  setup_env.py
scripts/: noise_effect_on_ksr.py  noise_effect_on_qnn.py  noise_effefct_on_qnn.py  noise_evaluation_only_energy.py  noise_evaluation_results.json  plot_results_ksr.py  test_compilation_time_gqnn.ipynb
tests/: compare_diis.py  compare_eigensolvers.py  compare_jit_speedup_with_batch.py  compare_nonjit_jit_speedup.py  jit_speedup.py  test_amplitude_encoding.py  test_classical_models.py  test_compare_diis.py  test_config.py  test_config_json.py  test_config_leaf.py  test_convolutional_models.py  test_dataloader.py  test_entangling_layers.py  test_eval.py  test_feature_maps.py  test_fermi.py  test_general_eigensolver.py  test_generalized_eigh_padded.py  test_global_ksr_model.py  test_hardware_ansatz.py  test_jax_dft.py  test_jit_scf_od.py  test_make_rdm1.py  test_measurements.py  test_networks.py  test_numint.py  test_quantum_measurement.py  test_quantum_noise.py  test_scf_od.py  test_td_xc.py  test_trainer.py  test_wrappers.py
tests/test_files/: custom_config.json  custom_config.yaml  test_config.json  test_json.json
