[tool.poetry]
name = "qedft"
version = "0.1.0"
description = "QEX"
authors = ["Igor Sokolov <sokolov.igor.ch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "2.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.14"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.7.0"
appnope = "0.1.4"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "3.0.0"
astunparse = "1.6.3"
async-lru = "2.0.4"
async-timeout = "5.0.1"
attrs = "24.3.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
black = "23.12.1"
bleach = "6.2.0"
build = "1.2.2.post1"
CacheControl = "0.14.1"
certifi = "2024.12.14"
cffi = "1.17.1"
cfgv = "3.4.0"
charset-normalizer = "3.4.1"
chex = "0.1.88"
cleo = "2.1.0"
click = "8.1.8"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.1"
coverage = "7.6.10"
crashtest = "0.4.1"
cryptography = "44.0.0"
cycler = "0.12.1"
debugpy = "1.8.11"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.9"
distlib = "0.3.9"
dulwich = "0.21.7"
einops = "0.8.0"
etils = "1.11.0"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flake8 = "6.1.0"
flatbuffers = "25.2.10"
flax = "0.10.2"
fonttools = "4.55.3"
fqdn = "1.5.1"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
gast = "0.6.0"
gitingest = "0.1.4"
google-pasta = "0.2.0"
grpcio = "1.71.0"
h11 = "0.14.0"
h5py = "3.12.1"
httpcore = "1.0.7"
httpx = "0.28.1"
humanize = "4.11.0"
identify = "2.6.3"
idna = "3.10"
importlib_metadata = "8.5.0"
importlib_resources = "6.4.5"
iniconfig = "2.0.0"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.31.0"
ipywidgets = "8.1.5"
isoduration = "20.11.0"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jax = "0.4.37"
jaxlib = "0.4.36"
jaxopt = "0.8.3"
jedi = "0.19.2"
jeepney = "0.9.0"
Jinja2 = "3.1.5"
jmespath = "1.0.1"
joblib = "1.4.2"
json5 = "0.10.0"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter = "1.1.1"
jupyter-console = "6.6.3"
jupyter-events = "0.11.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.3"
jupyter_core = "5.7.2"
jupyter_server = "2.15.0"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.3.4"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
jupyterlab_widgets = "3.0.13"
keras = "3.9.2"
keyring = "24.3.1"
kiwisolver = "1.4.8"
libclang = "18.1.1"
lightning-utilities = "0.14.1"
loguru = "0.7.3"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.10.0"
matplotlib-inline = "0.1.7"
mccabe = "0.7.0"
mdurl = "0.1.2"
mistune = "3.0.2"
ml_dtypes = "0.5.1"
more-itertools = "10.5.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.2.0"
mypy = "1.14.0"
mypy-extensions = "1.0.0"
namex = "0.0.8"
nanobind = "2.4.0"
nbclient = "0.10.2"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nodeenv = "1.9.1"
notebook = "7.3.2"
notebook_shim = "0.2.4"
numpy = "1.26.4"
opt_einsum = "3.4.0"
optax = "0.2.4"
optree = "0.15.0"
orbax-checkpoint = "0.10.3"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.2.3"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathspec = "0.12.1"
pbr = "6.1.0"
pexpect = "4.9.0"
pillow = "11.0.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
pre_commit = "4.0.1"
prometheus_client = "0.21.1"
prompt_toolkit = "3.0.48"
propcache = "0.3.0"
protobuf = "5.29.2"
psutil = "6.1.1"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pycodestyle = "2.11.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic_core = "2.23.4"
pyflakes = "3.1.0"
Pygments = "2.18.0"
PyJWT = "2.10.1"
pylatexenc = "2.10"
pyparsing = "3.2.0"
pyproject_hooks = "1.2.0"
pyscf = "2.3.0"
pytest = "7.4.4"
pytest-cov = "5.0.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "3.2.1"
pytorch-lightning = "2.5.0.post0"
pytz = "2025.2"
PyYAML = "6.0.2"
pyzmq = "26.2.0"
RapidFuzz = "3.11.0"
referencing = "0.35.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
requests_ntlm = "1.3.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.9.4"
rpds-py = "0.22.3"
rustworkx = "0.15.1"
scikit-learn = "1.6.0"
scipy = "1.11.4"
seaborn = "0.13.2"
SecretStorage = "3.3.3"
Send2Trash = "1.8.3"
shellingham = "1.5.4"
simplejson = "3.19.3"
six = "1.17.0"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
stack-data = "0.6.3"
stevedore = "5.4.0"
symengine = "0.13.0"
sympy = "1.13.1"
taskipy = "1.14.1"
tensorboard = "2.19.0"
tensorboard-data-server = "0.7.2"
tensorboardX = "2.6.2.2"
tensorflow = "2.19.0"
tensorflow-io-gcs-filesystem = "0.37.1"
tensorstore = "0.1.71"
termcolor = "3.0.1"
terminado = "0.18.1"
threadpoolctl = "3.5.0"
tiktoken = "0.9.0"
tinycss2 = "1.4.0"
tomli = "2.2.1"
tomlkit = "0.13.2"
toolz = "1.0.0"
torch = "2.6.0"
torchmetrics = "1.6.3"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
trove-classifiers = "2024.10.21.16"
types-python-dateutil = "2.9.0.20241206"
typing_extensions = "4.12.2"
tzdata = "2025.2"
uri-template = "1.3.0"
urllib3 = "2.3.0"
virtualenv = "20.28.0"
wcwidth = "0.2.13"
webcolors = "24.11.1"
webencodings = "0.5.1"
websocket-client = "1.8.0"
Werkzeug = "3.1.0"
widgetsnbextension = "4.0.13"
wrapt = "1.17.2"
xattr = "1.1.0"
yarl = "1.18.3"
zipp = "3.21.0"

# Git dependencies
horqrux = {git = "https://github.com/pasqal-io/horqrux.git", rev = "c17ce56aa51b9d40be281cd67d326a2a19f2488b"}
jax_dft = {git = "https://github.com/google-research/google-research.git", rev = "d750643452166776aa95907b21cbfa4249acfbfd", subdirectory = "jax_dft"}
pyscf-properties = {git = "https://github.com/pyscf/properties", rev = "4eee5a430fb47eca5962f36fdcaf75c2b87e7ede"}
pyscfad = {git = "https://github.com/fishjojo/pyscfad.git", rev = "8890c1a77cda8145409a105315f921ccb96fefc6"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
