[tool.poetry]
name = "QEX"
version = "0.1.0"
description = "A quantum-enhanced implementation of Kohn-Sham Density Functional Theory (KS-DFT) in JAX, building upon the following packages:"
authors = ["Igor Sokolov <igor.sokolov@pasqal.com>"]
readme = "README.md"
packages = [{include = "qedft"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
