[tool.poetry]
name = "QEX"
version = "0.1.0"
description = "A quantum-enhanced implementation of Kohn-Sham Density Functional Theory (KS-DFT) in JAX, building upon the following packages:"
authors = ["Igor Sokolov <igor.sokolov@pasqal.com>"]
readme = "README.md"
packages = [{include = "qedft"}]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pyscfad = "^0.1.10"
pyscf = "^2.9.0"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
scipy = "^1.15.3"
numpy = "^2.2.6"
matplotlib = "^3.10.3"
loguru = "^0.7.3"
horqrux = "^0.9.2"
jax_dft = {git = "https://github.com/google-research/google-research.git", rev = "c27ed001a50cf23f8db4d8ab4c537a36a72982de", subdirectory = "jax_dft"}
ipykernel = "^6.29.5"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py310"]


[tool.taskipy.tasks]
format-black = "black ."
format-isort = "isort ."
format_all = "task format-isort && task format-black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
